[dq3] Fixing mathematical formulae punctuation and spacing.

--- a/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
+++ b/dqrobotics/lesson3/lesson_dq3_dual_quaternion_basics_part1.ipynb
@@ -70,12 +70,12 @@
     "The set of dual numbers $\\mathbb{D}$ is yet a different way to extend $\\mathbb{R}$ . Any dual number can be written in the form\n",
     "\n",
     "\n",
-    "$$\\underline{ d } =a+b\\varepsilon \\;,$$\n",
+    "$$\\underline{ d } =a+b\\varepsilon ,$$\n",
     "\n",
-    "where $a,b\\in \\;$ $\\mathbb{R}$ . The algebra of dual numbers is based on the following property of the nilpotent dual unit\n",
+    "where $a,b\\in $ $\\mathbb{R}$ . The algebra of dual numbers is based on the following property of the nilpotent dual unit\n",
     "\n",
     "\n",
-    "$$\\varepsilon \\not= \\;0,\\varepsilon^2 =0\\ldotp$$\n",
+    "$$\\varepsilon \\not= 0,\\varepsilon^2 =0\\ldotp$$\n",
     "\n",
     "For instance, the dual number\n",
     "\n",
@@ -108,7 +108,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Note that the properties of the dual unit hold\n"
+    "Note that the properties of the dual unit hold.\n"
    ]
   },
   {
@@ -158,15 +158,14 @@
     "<a name=\"H_549D5E5F\"></a>\n",
     "### **Operations on dual numbers**\n",
     "\n",
-    "The operations on dual numbers are very similar to the operations on real numbers. We just need to respect the property $\\varepsilon \\not= \\;0,\\varepsilon^2 =0\\ldotp$\n",
+    "The operations on dual numbers are very similar to the operations on real numbers. We just need to respect the property $\\varepsilon \\not= 0,\\varepsilon^2 =0\\ldotp$\n",
     "\n",
     "\n",
     "For instance, for the dual numbers\n",
     "\n",
     "\n",
-    "$${\\underline{ d } }_1 =a_1 +{\\varepsilon b}_1$$\n",
-    "\n",
-    " ${\\underline{d} }_2 =a_2 +{\\varepsilon b}_2$ ,\n"
+    "$${\\underline{ d } }_1 =a_1 +{\\varepsilon b}_1,$$\n",
+    "$${\\underline{d} }_2 =a_2 +{\\varepsilon b}_2.$$\n"
    ]
   },
   {
@@ -212,7 +211,7 @@
     "<a name=\"H_3C5A7462\"></a>\n",
     "#### Sum/Subtraction\n",
     "\n",
-    "$${\\underline{ d } }_1 \\pm \\;{\\underline{ d } }_2 =\\left(a_1 \\pm \\;a_2 \\right)+\\left(b_1 \\pm \\;b_2 \\right)\\varepsilon \\ldotp$$"
+    "$${\\underline{ d } }_1 \\pm {\\underline{ d } }_2 =\\left(a_1 \\pm a_2 \\right)+\\left(b_1 \\pm b_2 \\right)\\varepsilon \\ldotp$$"
    ]
   },
   {
@@ -298,7 +297,7 @@
     "The operator $P\\left(\\ldotp \\right)$ can be used to obtain the primary part of the dual number. (The primary part is that which is not multiplied by the dual unit)\n",
     "\n",
     "\n",
-    "$$P\\left(\\underline{ d } \\right)=a$$"
+    "$$P\\left(\\underline{ d } \\right)=a.$$"
    ]
   },
   {
@@ -331,7 +330,7 @@
     "The operator $D\\left(\\ldotp \\right)$ can be used to obtain the dual part of the dual number. (The dual number is that which is multiplied by the dual unit)\n",
     "\n",
     "\n",
-    "$$D\\left(\\underline{ d } \\right)=b$$"
+    "$$D\\left(\\underline{ d } \\right) = b.$$"
    ]
   },
   {
@@ -364,9 +363,9 @@
     "When we extend the concept of dual numbers to be composed of two quaternions, we have what we call dual quaternions. They compose the set $\\mathcal{H}$ and can always be written in the form\n",
     "\n",
     "\n",
-    "$$\\underline{\\mathit{\\mathbf{h}}} =\\mathit{\\mathbf{h}}+\\grave{\\mathit{\\mathbf{h}}} \\varepsilon$$\n",
+    "$$\\underline{\\mathit{\\mathbf{h}}} =\\mathit{\\mathbf{h}}+\\mathit{\\mathbf{h}}^{\\prime} \\varepsilon,$$\n",
     "\n",
-    "where $\\mathit{\\mathbf{h}},\\grave{\\mathit{\\mathbf{h}}} \\in \\;$ $\\mathbb{H}$ .\n",
+    "where $\\mathit{\\mathbf{h}},\\mathit{\\mathbf{h}}^{\\prime} \\in $ $\\mathbb{H}$ .\n",
     "\n",
     "\n",
     "Note that $\\mathbb{R}\\subset \\mathcal{H}$ , $\\mathbb{C}\\subset \\mathcal{H}$ , $\\mathbb{H}\\subset \\mathcal{H}$ , $\\mathbb{D}\\subset \\mathcal{H}$ . That is, the real numbers, the complex numbers, the quaternions, and the dual numbers are all subsets of dual quaternions.\n",
@@ -375,7 +374,7 @@
     "For instance, the dual quaternion\n",
     "\n",
     "\n",
-    "$${\\underline{\\mathit{\\mathbf{h}}} }_1 =5+6\\hat{\\imath \\;} +7\\hat{\\;\\jmath \\;} +8\\hat{\\;k} +\\varepsilon \\left(9+15\\hat{\\imath \\;} +7\\hat{\\;\\jmath \\;} +8\\hat{\\;k} \\right)$$\n",
+    "$${\\underline{\\mathit{\\mathbf{h}}} }_1 =5+6\\hat{\\imath } +7\\hat{\\jmath } +8\\hat{k} +\\varepsilon \\left(9+15\\hat{\\imath } +7\\hat{\\jmath } +8\\hat{k} \\right)$$\n",
     "\n",
     "can be written using DQ Robotics as follows\n"
    ]
@@ -405,7 +404,7 @@
     "<a name=\"H_F2FDC5E8\"></a>\n",
     "### Operations on dual quaternions\n",
     "\n",
-    "Considering ${\\underline{\\mathit{\\mathbf{h}}} }_1 ,{\\underline{\\mathit{\\mathbf{h}}} }_2 \\in \\;$ $\\mathcal{H}$ , for example\n"
+    "Considering ${\\underline{\\mathit{\\mathbf{h}}} }_1 ,{\\underline{\\mathit{\\mathbf{h}}} }_2 \\in $ $\\mathcal{H}$ , for example.\n"
    ]
   },
   {
@@ -451,7 +450,7 @@
     "<a name=\"H_9FCFEB1E\"></a>\n",
     "#### Sum/Subtraction\n",
     "\n",
-    "$${\\underline{\\mathit{\\mathbf{h}}} }_1 \\pm {\\underline{\\mathit{\\mathbf{h}}} }_2 =\\left({\\mathit{\\mathbf{h}}}_1 \\pm {\\mathit{\\mathbf{h}}}_2 \\right)+\\varepsilon \\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\pm {\\mathit{\\mathbf{h}}}_2^{\\prime } \\right)$$"
+    "$${\\underline{\\mathit{\\mathbf{h}}} }_1 \\pm {\\underline{\\mathit{\\mathbf{h}}} }_2 =\\left({\\mathit{\\mathbf{h}}}_1 \\pm {\\mathit{\\mathbf{h}}}_2 \\right)+\\varepsilon \\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\pm {\\mathit{\\mathbf{h}}}_2^{\\prime } \\right).$$"
    ]
   },
   {
@@ -501,7 +500,7 @@
     "<a name=\"H_19AB0712\"></a>\n",
     "#### **Multiplication**\n",
     "\n",
-    "$${\\underline{\\mathit{\\mathbf{h}}} }_1 {\\underline{\\mathit{\\mathbf{h}}} }_2 =\\left({\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_2 \\right)+\\varepsilon \\left({\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_2^{\\prime } +{\\mathit{\\mathbf{h}}}_2 {\\mathit{\\mathbf{h}}}_1^{\\prime } \\right)$$"
+    "$${\\underline{\\mathit{\\mathbf{h}}} }_1 {\\underline{\\mathit{\\mathbf{h}}} }_2 =\\left({\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_2 \\right)+\\varepsilon \\left({\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_2^{\\prime } +{\\mathit{\\mathbf{h}}}_2 {\\mathit{\\mathbf{h}}}_1^{\\prime } \\right).$$"
    ]
   },
   {
@@ -532,7 +531,7 @@
     "Notice that the multiplication between dual quaternions is, ***in general***, NOT COMMUTATIVE.\n",
     "\n",
     "\n",
-    "$${\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_2 \\not= {{\\mathit{\\mathbf{h}}}_2 \\mathit{\\mathbf{h}}}_1$$"
+    "$${\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_2 \\not= {{\\mathit{\\mathbf{h}}}_2 \\mathit{\\mathbf{h}}}_1.$$"
    ]
   },
   {
@@ -601,7 +600,7 @@
     "The conjugate of the dual quaternion is obtained by taking the conjugate of the primary part and the dual part of the dual quaternion. Both of which are quaternions. This same logic applies for many other operators.\n",
     "\n",
     "\n",
-    "$${\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)}^* ={\\left({\\mathit{\\mathbf{h}}}_1 \\right)}^* +{\\varepsilon \\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right)}^*$$"
+    "$${\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)}^* ={\\left({\\mathit{\\mathbf{h}}}_1 \\right)}^* +{\\varepsilon \\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right)}^*.$$"
    ]
   },
   {
@@ -632,7 +631,7 @@
     "**Norm**\n",
     "\n",
     "\n",
-    "$$\\left|\\right|{\\underline{\\mathit{\\mathbf{h}}} }_1 \\left|\\right|=\\sqrt{{\\underline{\\mathit{\\mathbf{h}}} }_1 {\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)}^* \\;}$$"
+    "$$\\left|\\right|{\\underline{\\mathit{\\mathbf{h}}} }_1 \\left|\\right|=\\sqrt{{\\underline{\\mathit{\\mathbf{h}}} }_1 {\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)}^* }.$$"
    ]
   },
   {
@@ -662,7 +661,7 @@
     "<a name=\"H_6202B6BC\"></a>\n",
     "#### Real part\n",
     "\n",
-    "$$\\textrm{Re}\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)=\\textrm{Re}\\left({\\mathit{\\mathbf{h}}}_1 \\right)+\\epsilon \\textrm{Re}\\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right)$$"
+    "$$\\textrm{Re}\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)=\\textrm{Re}\\left({\\mathit{\\mathbf{h}}}_1 \\right)+\\epsilon \\textrm{Re}\\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right).$$"
    ]
   },
   {
@@ -695,7 +694,7 @@
     "<a name=\"H_8897FE36\"></a>\n",
     "#### Imaginary part\n",
     "\n",
-    "$$\\textrm{Im}\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)=\\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1 \\right)+\\epsilon \\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right)$$"
+    "$$\\textrm{Im}\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)=\\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1 \\right)+\\epsilon \\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right).$$"
    ]
   },
   {
@@ -728,7 +727,7 @@
     "<a name=\"H_55D1217E\"></a>\n",
     "#### Primary part\n",
     "\n",
-    "$$P\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)={\\mathit{\\mathbf{h}}}_1$$"
+    "$$P\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)={\\mathit{\\mathbf{h}}}_1.$$"
    ]
   },
   {
@@ -758,7 +757,7 @@
     "<a name=\"H_C40A3A46\"></a>\n",
     "#### **Dual part**\n",
     "\n",
-    "$$D\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)={\\mathit{\\mathbf{h}}}_1^{\\prime }$$"
+    "$$D\\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)={\\mathit{\\mathbf{h}}}_1^{\\prime }.$$"
    ]
   },
   {
@@ -791,7 +790,7 @@
     "The imaginary part of dual quaternions can be mapped to ${\\mathbb{R}}^6$ as follows\n",
     "\n",
     "\n",
-    "$${\\textrm{vec}}_6 \\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)=\\left\\lbrack \\begin{array}{c} {\\textrm{vec}}_3 \\left({\\mathit{\\mathbf{h}}}_1 \\right)\\\\ {\\textrm{vec}}_3 \\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right) \\end{array}\\right\\rbrack$$"
+    "$${\\textrm{vec}}_6 \\left({\\underline{\\mathit{\\mathbf{h}}} }_1 \\right)=\\left\\lbrack \\begin{array}{c} {\\textrm{vec}}_3 \\left({\\mathit{\\mathbf{h}}}_1 \\right)\\\\ {\\textrm{vec}}_3 \\left({\\mathit{\\mathbf{h}}}_1^{\\prime } \\right) \\end{array}\\right\\rbrack.$$"
    ]
   },
   {
@@ -947,7 +946,7 @@
     "A unit dual quaternion representing a translation followed by a rotation can always be written in the form\n",
     "\n",
     "\n",
-    "$$\\underline{\\mathit{\\mathbf{x}}} =\\mathit{\\mathbf{r}}+\\varepsilon \\frac{\\;1}{2}\\mathit{\\mathbf{t}}\\ldotp \\mathit{\\mathbf{r}}$$\n",
+    "$$\\underline{\\mathit{\\mathbf{x}}} =\\mathit{\\mathbf{r}}+\\varepsilon \\frac{1}{2}\\mathit{\\mathbf{t}}\\ldotp \\mathit{\\mathbf{r}}$$\n",
     "\n",
     "where $\\mathit{\\mathbf{r}}\\in$ ${\\mathbb{S}}^3$ is the unit-norm quaternion representing the rotation; and $t$ $\\in {\\mathbb{H}}_p$ is the quaternion representing the translation.\n",
     "\n",
@@ -966,7 +965,7 @@
     "For instance, to represent the translation of 1 meter about the y-axis,\n",
     "\n",
     "\n",
-    "$${\\mathit{\\mathbf{t}}}_1 =\\hat{\\;\\jmath \\;\\;} ,$$"
+    "$${\\mathit{\\mathbf{t}}}_1 =\\hat{\\jmath } ,$$"
    ]
   },
   {
@@ -995,7 +994,7 @@
     "followed by a rotation of $\\frac{\\pi }{2}$ rad about the x-axis,\n",
     "\n",
     "\n",
-    "$$r_1 =\\cos \\left(\\frac{\\;\\pi \\;}{4}\\right)+\\hat{\\;\\imath \\;} \\sin \\left(\\frac{\\pi \\;}{4}\\right)$$"
+    "$$r_1 =\\cos \\left(\\frac{\\pi }{4}\\right)+\\hat{\\imath } \\sin \\left(\\frac{\\pi }{4}\\right)$$"
    ]
   },
   {
@@ -1024,7 +1023,7 @@
     "the pose transformation will be\n",
     "\n",
     "\n",
-    "$${\\underline{\\;\\mathit{\\mathbf{x}}} }_1 ={\\mathit{\\mathbf{r}}}_1 +\\varepsilon \\frac{\\;1}{2}{\\mathit{\\mathbf{t}}}_1 {\\mathit{\\mathbf{r}}}_1 =\\cos \\left(\\frac{\\;\\pi \\;}{4}\\right)+\\hat{\\;\\imath \\;} \\sin \\left(\\frac{\\;\\pi \\;}{4}\\right)+\\frac{\\;1}{2}\\varepsilon \\left(\\hat{\\;\\jmath \\;\\;} \\cos \\left(\\frac{\\;\\pi \\;}{4}\\right)-\\hat{\\;k\\;} \\sin \\left(\\frac{\\;\\pi \\;}{4}\\right)\\right)$$"
+    "$${\\underline{\\mathit{\\mathbf{x}}} }_1 ={\\mathit{\\mathbf{r}}}_1 +\\varepsilon \\frac{1}{2}{\\mathit{\\mathbf{t}}}_1 {\\mathit{\\mathbf{r}}}_1 =\\cos \\left(\\frac{\\pi }{4}\\right)+\\hat{\\imath } \\sin \\left(\\frac{\\pi }{4}\\right)+\\frac{1}{2}\\varepsilon \\left(\\hat{\\jmath } \\cos \\left(\\frac{\\pi }{4}\\right)-\\hat{k} \\sin \\left(\\frac{\\pi }{4}\\right)\\right)$$"
    ]
   },
   {
@@ -1050,7 +1049,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "We can check that ${\\underline{\\;\\mathit{\\mathbf{x}}} }_1$ indeed has unit norm\n"
+    "We can check that ${\\underline{\\mathit{\\mathbf{x}}} }_1$ indeed has unit norm\n"
    ]
   },
   {
@@ -1077,28 +1076,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"H_DFF20C45\"></a>\n",
     "#### Dual quaternion double-cover property\n",
     "\n",
     "Given the way that the pose transformation is based on quaternions, the double cover also extends to dual quaternions.\n",
     "\n",
     "\n",
-    "$${\\underline{\\;\\mathit{\\mathbf{x}}} }_1$$\n",
+    "$${\\underline{\\mathit{\\mathbf{x}}} }_1$$\n",
     "\n",
     "and\n",
     "\n",
     "\n",
-    "$$-{\\underline{\\;\\mathit{\\mathbf{x}}} }_1$$\n",
+    "$$-{\\underline{\\mathit{\\mathbf{x}}} }_1$$\n",
     "\n",
     "represent the same pose transformation.\n",
     "\n",
-    "<a name=\"H_D6D1F1D7\"></a>\n",
     "#### No pose transformation\n",
     "\n",
     "The dual quaternion that represents that there is no pose transformation is\n",
     "\n",
     "\n",
-    "$${\\underline{\\;\\mathit{\\mathbf{x}}} }_1 =1$$"
+    "$${\\underline{\\mathit{\\mathbf{x}}} }_1 =1$$"
    ]
   },
   {
@@ -1114,7 +1111,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"H_8B900EDE\"></a>\n",
     "#### Plotting unit dual quaternions\n",
     "\n",
     "Using DQ Robotics, unit dual quaternions can be plotted on screen the same way as unit quaternions.\n"
@@ -1150,10 +1146,10 @@
     "<a name=\"H_0984289C\"></a>\n",
     "#### Sequential pose transforrmations\n",
     "\n",
-    "Sequential pose transformations are obtained by post-multiplication of unit dual quaternions. For example, the transformation between the neutral reference frame by ${\\underline{\\;\\mathit{\\mathbf{x}}} }_1$ followed by ${\\underline{\\;\\mathit{\\mathbf{x}}} }_2$  is\n",
+    "Sequential pose transformations are obtained by post-multiplication of unit dual quaternions. For example, the transformation between the neutral reference frame by ${\\underline{\\mathit{\\mathbf{x}}} }_1$ followed by ${\\underline{\\mathit{\\mathbf{x}}} }_2$  is\n",
     "\n",
     "\n",
-    "$${\\underline{\\;\\mathit{\\mathbf{x}}} }_3 ={\\underline{\\;\\mathit{\\mathbf{x}}} }_1 {\\underline{\\;\\mathit{\\mathbf{x}}} }_2$$"
+    "$${\\underline{\\mathit{\\mathbf{x}}} }_3 ={\\underline{\\mathit{\\mathbf{x}}} }_1 {\\underline{\\mathit{\\mathbf{x}}} }_2$$"
    ]
   },
   {
@@ -1236,7 +1232,7 @@
     "The reverse pose transformation can be obtained using the conjugate operation, because unit dual quaternions have unit norm. Hence,\n",
     "\n",
     "\n",
-    "$$\\underline{\\mathit{\\mathbf{x}}} {\\left(\\underline{\\;\\mathit{\\mathbf{x}}} \\right)}^* =1$$\n",
+    "$$\\underline{\\mathit{\\mathbf{x}}} {\\left(\\underline{\\mathit{\\mathbf{x}}} \\right)}^* =1$$\n",
     "\n",
     "for any unit dual quaternion.\n",
     "\n",
@@ -1378,12 +1374,12 @@
     "\n",
     "Following the template above to create a script called [dual_quaternion_basics_homework_part1.py], do the following.\n",
     "\n",
-    "1.  Store, in ${\\underline{\\mathit{\\mathbf{x}}} }_1$ , the pose transformation of a translation of 1 meter in the x-axis, followed by a rotation of $\\frac{\\;\\pi \\;}{8}$ rad about the z-axis.\n",
-    "2. Store, in ${\\underline{\\mathit{\\mathbf{x}}} }_2$ , the pose transformation of a translation of -1 meter in the z-axis, followed by a rotation of $-\\frac{\\;\\pi \\;}{2}$ rad about the x-axis.\n",
+    "1.  Store, in ${\\underline{\\mathit{\\mathbf{x}}} }_1$ , the pose transformation of a translation of 1 meter in the x-axis, followed by a rotation of $\\frac{\\pi }{8}$ rad about the z-axis.\n",
+    "2. Store, in ${\\underline{\\mathit{\\mathbf{x}}} }_2$ , the pose transformation of a translation of -1 meter in the z-axis, followed by a rotation of $-\\frac{\\pi }{2}$ rad about the x-axis.\n",
     "3. Calculate the result of the sequential rotation of the neutral reference-frame by ${\\underline{\\mathit{\\mathbf{x}}} }_0 =1$ , followed by ${\\underline{\\mathit{\\mathbf{x}}} }_1$ , followed by ${\\underline{\\mathit{\\mathbf{x}}} }_2$ , and store it in ${\\underline{\\mathit{\\mathbf{x}}} }_3$ . Plot ${\\underline{\\mathit{\\mathbf{x}}} }_3$ .\n",
     "4. Obtain the rotation of ${\\underline{\\mathit{\\mathbf{x}}} }_3$ without using $\\textrm{rotation}\\left(\\ldotp \\right)$\n",
     "5. Obtain the translation of ${\\underline{\\mathit{\\mathbf{x}}} }_3$ without using $\\textrm{translation}\\left(\\ldotp \\right)$\n",
-    "6. Obtain the pose transformation of a rotation of $\\frac{\\;\\pi \\;}{8}$ rad about the z-axis followed by a translation of 1 meter in the x-axis, and store it in ${\\underline{\\mathit{\\mathbf{x}}} }_4$ . Is it the same as ${\\underline{\\mathit{\\mathbf{x}}} }_1$ ? If it is different, why is it different?\n"
+    "6. Obtain the pose transformation of a rotation of $\\frac{\\pi }{8}$ rad about the z-axis followed by a translation of 1 meter in the x-axis, and store it in ${\\underline{\\mathit{\\mathbf{x}}} }_4$ . Is it the same as ${\\underline{\\mathit{\\mathbf{x}}} }_1$ ? If it is different, why is it different?\n"
    ]
   }
  ],
