[index] Adding index page to the basic lessons.

--- a/basic_lessons/lesson4_tutorial.ipynb
+++ b/basic_lessons/lesson4_tutorial.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "## Step 2: Calculate the differential kinematics by hand\n",
     "\n",
-    "We first calculate the Jacobian by hand, because programatically there's nothing for you to do yet. \n",
+    "We first calculate the Jacobian by hand, because programmatically there's nothing for you to do yet.\n",
     "\n",
     "The analytical Jacobian is given by\n",
     "\n",
