--- a/basic_lessons/lesson5_tutorial.ipynb
+++ b/basic_lessons/lesson5_tutorial.ipynb
@@ -48,10 +48,8 @@
    "outputs": [],
    "source": [
     "%%capture\n",
-    "%pip install numpy\n",
-    "%pip install numpy --break-system-packages\n",
-    "%pip install matplotlib\n",
-    "%pip install matplotlib --break-system-packages"
+    "%pip install numpy matplotlib\n",
+    "%pip install numpy matplotlib --break-system-packages"
    ]
   },
   {
