[dq1] Equation punctuation, fix in homework list, added link for f-strings definition in python docs.

--- a/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
+++ b/dqrobotics/lesson1/lesson_dq1_python_basics.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%capture\n",
     "'''\n",
@@ -19,7 +17,9 @@
     " Contributors to this file:\n",
     "     Murilo Marques Marinho (murilomarinho@ieee.org)\n",
     "'''"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -32,7 +32,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Before we begin learning DQ Robotics, it is important to understand some basics of Python programming.\n",
+    "Before we begin learning `dqrobobotics`, it is important to understand some basics of Python and `numpy` programming.\n",
     "\n",
     "## Python scripts\n",
     "\n",
@@ -50,12 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# This is a comment. Python will ignore this line."
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -72,22 +72,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Instantiate a1 and a2\n",
     "a1 = 5.0"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "a2 = 67.0"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -97,21 +97,22 @@
     "Note that the output of the script is not displayed.\n",
     "\n",
     "\n",
-    "If you want to show the values stored in each variable, you have to explicitly call `print`. Ideally, with f-strings.\n"
+    "If you want to show the values stored in each variable, you have to explicitly call `print`. Ideally, with [formatted string literals](https://docs.python.org/3/tutorial/inputoutput.html#formatted-string-literals), more usually called f-strings.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Showing the value of a1 but NOT a2\n",
     "a1 = 5.0\n",
     "a2 = 67.0\n",
     "\n",
     "print(f\"The output of a1 is {a1}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -123,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Showing the value of a2 but NOT a1\n",
     "a1 = 5.0\n",
     "a2 = 67.0\n",
     "\n",
     "print(f\"The value of a2 is {a2}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -144,16 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Showing the values of of a1 and a2\n",
     "a1 = 5.0\n",
     "a2 = 67.0\n",
     "\n",
     "print(f\"The value of a1 is {a1} and a2 is {a2}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -165,15 +166,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Displaying small values\n",
     "a1 = 0.12312312312311231231231231231213231233\n",
     "\n",
     "print(f\"a1 = {a1}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -195,21 +196,21 @@
     "<a name=\"H_F8D0F1E0\"></a>\n",
     "### Sum\n",
     "\n",
-    "$$a_3 =a_1 +a_2$$"
+    "$$a_3 =a_1 +a_2.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Get the sum of a1 and a2\n",
     "a1 = 5\n",
     "a2 = 67\n",
     "a3 = a1 + a2\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -218,21 +219,21 @@
     "<a name=\"H_2998A281\"></a>\n",
     "### Subtraction\n",
     "\n",
-    "$$a_3 =a_1 -a_2$$"
+    "$$a_3 =a_1 - a_2.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Subtract a1 by a2\n",
     "a1 = 5\n",
     "a2 = 67\n",
     "a3 = a1 - a2\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -241,21 +242,21 @@
     "<a name=\"H_BC234F99\"></a>\n",
     "### Multiplication\n",
     "\n",
-    "$$a_3 =a_{1}a_{2}$$"
+    "$$a_3 =a_{1}a_{2}.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Multiply a1 by a2\n",
     "a1 = 5\n",
     "a2 = 67\n",
     "a3 = a1 * a2\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -264,21 +265,21 @@
     "<a name=\"H_C82901BB\"></a>\n",
     "### Division\n",
     "\n",
-    "$$a_3 =\\frac{a_1 }{a_2 }$$"
+    "$$a_3 =\\frac{a_1 }{a_2 }.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Divide a1 by a2\n",
     "a1 = 5\n",
     "a2 = 67\n",
     "a3 = a1 / a2\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -287,39 +288,39 @@
     "<a name=\"H_4B48E0F1\"></a>\n",
     "#### Exponentiation\n",
     "\n",
-    "$$a_3 =a_1^2$$"
+    "$$a_3 =a_1^2.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# a1 squared\n",
     "a1 = 5\n",
     "a3 = a1**2\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "$$a_3 =a_1^3$$"
+    "$$a_3 =a_1^3.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "# a1 cubed\n",
     "a1 = 5\n",
     "a3 = a1**3"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -328,19 +329,19 @@
     "<a name=\"H_765559ED\"></a>\n",
     "## Trigonometric operations with real numbers\n",
     "\n",
-    "In Python, we can easily use $\\pi$ and some important trigonometric functions from the module `math`. For example, $\\pi$ is defined as \"pi\". We can show its first 16 significant digits as\n"
+    "In Python, we can easily use $\\pi$ and some important trigonometric functions from the module `math`. For example, $\\pi$ is defined as `pi`. We can show its first 16 significant digits as\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from math import pi\n",
     "# Display the value of pi\n",
     "print(f\"pi = {pi}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -355,21 +356,21 @@
     "<a name=\"H_CCFAA037\"></a>\n",
     "### Cosine\n",
     "\n",
-    "$$a_1 =\\cos \\left(\\theta {\\;}_1 \\right)$$"
+    "$$a_1 =\\cos \\left(\\theta {\\;}_1 \\right).$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from math import cos\n",
     "# Get the cosine of theta1\n",
     "theta1 = pi/4\n",
     "a1 = cos(theta1)\n",
     "print(f\"a1 = {a1}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -378,21 +379,21 @@
     "<a name=\"H_BEB0CE4E\"></a>\n",
     "### Sine\n",
     "\n",
-    "$$a_2 =\\sin \\left(\\theta {\\;}_2 \\right)$$"
+    "$$a_2 =\\sin \\left(\\theta {\\;}_2 \\right).$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from math import sin\n",
     "# Get the sine of theta1\n",
     "theta2 = pi/2\n",
     "a2 = sin(theta2)\n",
     "print(f\"a2 = {a2}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -401,14 +402,12 @@
     "<a name=\"H_24035A9E\"></a>\n",
     "### Tangent\n",
     "\n",
-    "$$a_3 =\\tan \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right)$$"
+    "$$a_3 =\\tan \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right).$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from math import tan\n",
     "# Get the tangent of theta1 + theta2\n",
@@ -416,7 +415,9 @@
     "theta2 = pi/2\n",
     "a3 = tan(theta1 + theta2)\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -430,21 +431,21 @@
     "<a name=\"H_75E1C5A4\"></a>\n",
     "### Exponential\n",
     "\n",
-    "$$a_3 =e^{a_1 }$$"
+    "$$a_3 =e^{a_1 }.$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from math import exp\n",
     "# Get the exponential\n",
     "a1 = 5\n",
     "a3 = exp(a1)\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -453,36 +454,38 @@
     "<a name=\"H_BC849EBD\"></a>\n",
     "### Natural logarithm\n",
     "\n",
-    "$$a_3 =\\log_e \\left(a_2 \\right)$$"
+    "$$a_3 =\\log_e \\left(a_2 \\right).$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
    "source": [
     "from math import log\n",
     "# Get the logarithm\n",
     "a2 = 67\n",
     "a3 = log(a2)\n",
     "print(f\"a3 = {a3}\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# Homework\n",
-    "1. Create a Python script called [python_basics_homework.py] and, in the same script, do 2-10.\n",
-    "2. Define the real numbers $a_1 =123$ and $a_2 =321$\n",
-    "3. Calculate and display $a_3 =a_1 +a_2$\n",
-    "4. Calculate and display $a_3 =a_1 *a_2$\n",
-    "5. Calculate and display $a_3 =\\frac{a_1 }{a_2 }$\n",
-    "6. Define the real numbers $\\theta {\\;}_1 =\\frac{\\pi \\;\\;}{12}$ and $\\theta {\\;}_2 =3\\pi \\;$\n",
-    "7. Calculate and display $a_3 =\\cos \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right)$\n",
-    "8. Calculate and display $a_3 =\\cos^2 \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right)+\\sin^2 \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right)$\n",
-    "9. Calculate and display $a_3 =\\exp \\left(a_1 \\right)+\\log_e \\left(a_2 \\right)$\n"
+    "\n",
+    "Create a Python script called `python_basics_homework.py` and, in the same script, do the following.\n",
+    "\n",
+    "1. Define the real numbers $a_1 =123$ and $a_2 =321$\n",
+    "2. Calculate and display $a_3 =a_1 + a_2$\n",
+    "3. Calculate and display $a_3 =a_{1}a_2$\n",
+    "4. Calculate and display $a_3 =\\frac{a_1 }{a_2 }$\n",
+    "5. Define the real numbers $\\theta {\\;}_1 =\\frac{\\pi \\;\\;}{12}$ and $\\theta {\\;}_2 =3\\pi \\;$\n",
+    "6. Calculate and display $a_3 =\\cos \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right)$\n",
+    "7. Calculate and display $a_3 =\\cos^2 \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right)+\\sin^2 \\left(\\theta {\\;}_1 +\\theta {\\;}_2 \\right)$\n",
+    "8. Calculate and display $a_3 =\\exp \\left(a_1 \\right)+\\log_e \\left(a_2 \\right)$\n"
    ]
   }
  ],
