[dq8] Fixing warning about matplotlib string

--- a/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
+++ b/dqrobotics/lesson8/lesson_dq8_optimization_based_robot_control.ipynb
@@ -942,7 +942,8 @@
     "ax = plt.axes(projection='3d')\n",
     "plot(pi_top, plane=True, scale=14)\n",
     "plot(pi_bottom, plane=True, scale=14)\n",
-    "plt.title('Plane constraints')"
+    "plt.title('Plane constraints')\n",
+    "plt.show()"
    ],
    "outputs": [],
    "execution_count": null
