[lesson1] Adding exercises

--- a/basic_lessons/lesson1_tutorial.ipynb
+++ b/basic_lessons/lesson1_tutorial.ipynb
@@ -1000,6 +1000,28 @@
     "\n",
     "print(f'O_3={O_3}.')"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# Exercises\n",
+    "\n",
+    "## Exercise 1\n",
+    "\n",
+    "For $\\phi = \\pi/4$, let\n",
+    "\n",
+    "$$ e_1 = \\sin(\\phi) + 4\\cos(\\frac{\\phi}{5})$$\n",
+    "\n",
+    "Using the `math` module which is already imported, calculate the value of $e_1$ and store it in the variable shown in the cell below."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "e1 = None # Replace None with your solution to this problem."
   }
  ],
  "metadata": {
