[lesson1] Adjusted exercises and added answers.

--- a/basic_lessons/lesson1_tutorial.ipynb
+++ b/basic_lessons/lesson1_tutorial.ipynb
@@ -650,7 +650,7 @@
    "metadata": {},
    "source": [
     "### Instantiating matrices\n",
-    "For instance, suppose that we want to instanteate two real square matrices\n",
+    "For instance, suppose that we want to instantiate two real square matrices\n",
     "$$\\mymatrix{A} = \\left[\\begin{array}{ccc}\n",
     "         1 & 2 \\\\\n",
     "         3 & 4 \n",
@@ -1013,7 +1013,7 @@
     "\n",
     "$$ e_1 = \\sin(\\phi) + 4\\cos(\\frac{\\phi}{5})$$\n",
     "\n",
-    "Using the `math` module which is already imported, calculate the value of $e_1$ and store it in the variable shown in the cell below."
+    "Using the `math` module which is already imported, calculate the value of $e_1$ and store it in the variable `e1` shown in the cell below."
    ]
   },
   {
@@ -1021,7 +1021,39 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "e1 = None # Replace None with your solution to this problem."
+   "source": "e1 = None # Replace None with your solution to this exercise."
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "Given\n",
+    "\n",
+    "$$\\mymatrix{A}_2 = \\left[\\begin{array}{ccc}\n",
+    "         5 & 2 \\\\\n",
+    "         3 & 5\n",
+    "        \\end{array}\\right]$$\n",
+    "and\n",
+    "$$\n",
+    "\\mymatrix{B}_2 = \\left[\\begin{array}{ccc}\n",
+    "        5 & 3 \\\\\n",
+    "        3 & 8\n",
+    "        \\end{array}\\right].$$\n",
+    "\n",
+    "Let\n",
+    "$$\\mymatrix{C}_2 = \\mymatrix{A}_2 + \\mymatrix{B}_2 + \\mymatrix{A}_2\\mymatrix{B}_2 - \\mymatrix{B}_2\\mymatrix{A}_2$$\n",
+    "\n",
+    "Using the numpy module which is already imported, calculate the value of $\\mymatrix{C}_2$ and store it in the variable `C2` shown in the cell below."
+   ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "C2 = None # replace None with your solution to this exercise."
   }
  ],
  "metadata": {
