--- a/basic_lessons/lesson1_exercise_answers.ipynb
+++ b/basic_lessons/lesson1_exercise_answers.ipynb
@@ -44,14 +44,19 @@
    "source": "# Valid imports"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-28T15:43:12.703034Z",
+     "start_time": "2026-01-28T15:43:12.694818Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from math import pi, sin, cos\n",
     "import numpy as np"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -63,15 +68,31 @@
    ]
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-28T15:43:12.729440Z",
+     "start_time": "2026-01-28T15:43:12.705744Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "phi = pi/4.0\n",
     "\n",
-    "e1 = sin(phi) + 4 * cos(phi / 5)"
+    "e1 = sin(phi) + 4 * cos(phi / 5)\n",
+    "\n",
+    "# Printing the result is NOT a mandatory part of the answer.\n",
+    "print(f'e1 = {e1}')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e1 = 4.657860143567099\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -79,18 +100,35 @@
    "source": "## Exercise 2"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-01-28T15:43:12.743890Z",
+     "start_time": "2026-01-28T15:43:12.731585Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "A2 = np.array([[5, 2],\n",
     "              [3, 5]])\n",
     "B2 = np.array([[5, 3],\n",
     "              [3, 8]])\n",
     "\n",
-    "C2 = A2 + B2 + (A2 @ B2) - (B2 @ A2)"
-   ]
+    "C2 = A2 + B2 + (A2 @ B2) - (B2 @ A2)\n",
+    "\n",
+    "# Printing the result is NOT a mandatory part of the answer.\n",
+    "print(f'C2 = {C2}')"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C2 = [[ 7 11]\n",
+      " [-3 16]]\n"
+     ]
+    }
+   ],
+   "execution_count": 7
   }
  ],
  "metadata": {
