[lesson1] Adding missing punctuation.

--- a/basic_lessons/lesson1_tutorial.ipynb
+++ b/basic_lessons/lesson1_tutorial.ipynb
@@ -1011,7 +1011,7 @@
     "\n",
     "For $\\phi = \\pi/4$, let\n",
     "\n",
-    "$$ e_1 = \\sin(\\phi) + 4\\cos(\\frac{\\phi}{5})$$\n",
+    "$$ e_1 = \\sin(\\phi) + 4\\cos(\\frac{\\phi}{5}).$$\n",
     "\n",
     "Using the `math` module which is already imported, calculate the value of $e_1$ and store it in the variable `e1` shown in the cell below."
    ]
@@ -1043,7 +1043,7 @@
     "        \\end{array}\\right].$$\n",
     "\n",
     "Let\n",
-    "$$\\mymatrix{C}_2 = \\mymatrix{A}_2 + \\mymatrix{B}_2 + \\mymatrix{A}_2\\mymatrix{B}_2 - \\mymatrix{B}_2\\mymatrix{A}_2$$\n",
+    "$$\\mymatrix{C}_2 = \\mymatrix{A}_2 + \\mymatrix{B}_2 + \\mymatrix{A}_2\\mymatrix{B}_2 - \\mymatrix{B}_2\\mymatrix{A}_2.$$\n",
     "\n",
     "Using the numpy module which is already imported, calculate the value of $\\mymatrix{C}_2$ and store it in the variable `C2` shown in the cell below."
    ]
